# pp2

./: .gitignore  README.md
01file/task-1-10/: CMakeLists.txt  main.c
01file/task-1-2/: main.c  text.txt
01file/task-1-21/: CMakeLists.txt  main.c  text.txt
01file/task-1-23/: CMakeLists.txt  first.txt  main.c  second.txt  text.txt
01file/task-1-3/: CMakeLists.txt  text2.txt
01file/task-1-4/: main.c
01file/task-1-5/: main.c
01file/task-1-6/: CMakeLists.txt  main.c
01file/task-1-7/: CMakeLists.txt  main.c
01file/task-1-8/: CMakeLists.txt  main.c  text.txt  text2.txt
01file/task-1-9/: CMakeLists.txt  main.c  text.txt  text2.txt  text3.txt  text4.txt
02struct/task-2-1/: CMakeLists.txt  main.c  point.c  point.h
02struct/task-2-18/: CMakeLists.txt  main.c  text.txt  text2.txt
02struct/task-2-2/: student_util.c  student_util.h
02struct/task-2-20/: CMakeLists.txt  main.c
02struct/task-2-3/: CMakeLists.txt  main.c  student_util.c  student_util.h
02struct/task-2-5/: CMakeLists.txt  main.c  student_util.c  student_util.h
03union/task-3-10/: CMakeLists.txt  figure.c  figure.h  main.c
03union/task-3-12/: CMakeLists.txt  fetch.txt  main.c  steganography.c  steganography.h
03union/task-3-14/: CMakeLists.txt  main.c  mix_types.c  mix_types.h
03union/task-3-7/: CMakeLists.txt  double_to_char.c  double_to_char.h  main.c
04dynmemo/task-4-10/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  main.c
04dynmemo/task-4-11/: CMakeLists.txt  main.c  vector.c  vector.h
04dynmemo/task-4-13/: CMakeLists.txt  main.c  (+2 more)
utils/: read_line.c  read_line.h
(+158 files in other folders)
